Use utf8 from StandardCharsets when url encoding or decoding.